--- a/package.json
+++ b/package.json
@@ -116,6 +116,9 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
+  "prisma": {
+    "schema": "prisma/schema"
+  },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
